--- a/src/pages/Scheduler/PageHeader/styles.module.scss
+++ b/src/pages/Scheduler/PageHeader/styles.module.scss
@@ -6,8 +6,9 @@
   .left {
     .title {
       font-size: 3rem;
-      font-weight: 700;
       margin: 0;
+      font-weight: 600;
+      color: white;
     }
   }
 
