--- a/src/components/ScheduleCardsSider/ScheduleSearch/styles.module.scss
+++ b/src/components/ScheduleCardsSider/ScheduleSearch/styles.module.scss
@@ -1,10 +1,9 @@
 .container {
-  padding: 1rem 0;
-
   .input {
     width: 80%;
-    border-bottom: 1px solid #9c9c9c;
+    border-bottom: 1px solid white;
     padding: 0;
+    color: white;
   }
 }
 
