--- a/src/components/ScheduleLogsContent/styles.module.scss
+++ b/src/components/ScheduleLogsContent/styles.module.scss
@@ -1,6 +1,11 @@
 .container {
   padding: 0 2rem 2rem;
 
+  .topBar {
+    display: flex;
+    justify-content: space-between;
+  }
+
   .search {
     :global(.ant-input-affix-wrapper) {
       width: 25rem;
