--- a/src/components/ScheduleCardsSider/ScheduleCardsList/ScheduleCard/styles.module.scss
+++ b/src/components/ScheduleCardsSider/ScheduleCardsList/ScheduleCard/styles.module.scss
@@ -4,7 +4,7 @@
   }
 
   .meta {
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
 
     :global {
       .ant-card-meta-avatar {
@@ -15,6 +15,13 @@
         font-weight: 600;
       }
     }
+  }
+
+  .description {
+    width: "90%";
+    text-align: justify;
+    text-justify: inter-word;
+    line-height: 1.2rem;
   }
 
   .footer {
