--- a/src/pages/Scheduler/styles.module.scss
+++ b/src/pages/Scheduler/styles.module.scss
@@ -4,18 +4,28 @@
   padding-left: 1rem;
 }
 
-.sider {
-  height: 90vh;
-  overflow-y: auto;
-  overflow-x: hidden;
-  background: none;
-  width: auto !important;
-  max-width: none !important;
-  flex: none !important;
+.content {
+  display: flex;
+  flex-direction: row;
+
+  .schedules {
+    min-width: 25rem;
+    height: 90vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+    background: none;
+  }
+
+  .logs {
+    height: 90vh;
+    width: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
 }
 
-.content {
-  height: 90vh;
-  overflow-y: auto;
-  overflow-x: hidden;
+@media (max-width: 850px) {
+  .content {
+    flex-direction: column;
+  }
 }
