Implemented Retire/Unretire functionality. Create badge status for Schedule Cards.

--- a/src/components/ScheduleCardsSider/ScheduleCardsList/ScheduleCard/styles.module.scss
+++ b/src/components/ScheduleCardsSider/ScheduleCardsList/ScheduleCard/styles.module.scss
@@ -27,6 +27,11 @@
   .footer {
     margin-top: 0.5rem;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+
+    .statusBadge {
+      display: flex;
+      align-items: center;
+    }
   }
 }
