--- a/src/components/ScheduleCardsSider/ScheduleCardsList/ScheduleCard/RetireButton/styles.module.scss
+++ b/src/components/ScheduleCardsSider/ScheduleCardsList/ScheduleCard/RetireButton/styles.module.scss
@@ -1,3 +1,12 @@
 .container {
   margin: 0;
+
+  .button {
+    display: flex;
+    align-items: center;
+  }
+
+  .label {
+    padding-left: 0.5rem;
+  }
 }
