--- a/src/components/ScheduleCardsSider/styles.module.scss
+++ b/src/components/ScheduleCardsSider/styles.module.scss
@@ -3,8 +3,7 @@
   flex-direction: column;
   justify-content: space-around;
   padding: 0 1rem;
-  max-width: 24rem;
-  min-width: 24rem;
+  width: 100%;
 
   > div {
     margin-bottom: 1rem;
